2005-09-27  Thorsten Kukuk  <kukuk@suse.de>

	* NEWS: Document removal of pam_radius.
	* autogen.sh: Make configure script executeable.

	* conv/pam_conv1/Makefile (EXTRA_DIST): Removed lex.yy.c
	(lex.yy.c): Fixed out of tree build.

	* conv/pam_conv1/pam_conv.y: Fix main prototype.

	* README: Adjust.

2005-09-26  Tomas Mraz  <t8m@centrum.cz>

	* NEWS: Add a few missing entries from CHANGELOG.
	
	* AUTHORS: Fixed entries for Toady and me.
	
	* Makefile.am (M4_FILES): Fixed out of tree build.
	* doc/specs/Makefile.am (EXTRA_DIST): Removed lex.yy.c
	(spec, lex.yy.c): Fixed out of tree build.
	
	* modules/pam_userdb/README: Document try_first_pass and
	use_first_pass options, remove use_authtok option.
	

2005-09-26  Dmitry V. Levin  <ldv@altlinux.org>

	* NEWS: Mention changes in pam_lastlog.

2005-09-26  Thorsten Kukuk  <kukuk@suse.de>

	* release 0.99.1.0

	* NEWS: New file.
	* autogen.sh: Don't generate NEWS file.
	* CHANGELOG: Document it as obsolete.

2005-09-26  Tomas Mraz  <t8m@centrum.cz>

	* modules/pam_unix/pam_unix_acct.c (_unix_run_verify_binary):
	_log_err() -> pam_syslog()
	(pam_sm_acct_mgmt): _log_err() -> pam_syslog(), fix warning.
	* modules/pam_unix/pam_unix_auth.c (pam_sm_authenticate):
	_log_err() -> pam_syslog()
	* modules/pam_unix/pam_unix_passwd.c: removed obsolete ifdef
	(getNISserver, _unix_run_shadow_binary, _update_passwd,
	_update_shadow, _do_setpass, _pam_unix_approve_pass,
	pam_sm_chauthtok): _log_err() -> pam_syslog()
	* modules/pam_unix/pam_unix_sess.c: removed obsolete ifdef
	(pam_sm_open_session, pam_sm_close_session):
	_log_err() -> pam_syslog()
	* modules/pam_unix/support.c (_log_err, converse): removed
	(_make_remark): use pam_prompt() instead of converse()
	(_set_ctrl, _cleanup_failures, _unix_run_helper_binary,
	_unix_verify_password, _unix_read_password):
	_log_err() -> pam_syslog()
	_cleanup(), _unix_cleanup(): Silence unused param warnings.
	(_cleanup_failures, _unix_verify_password, _unix_getpwnam,